prob done with the pfp

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 							<p>Hey, I'm a 28-year-old on a unique journey. After trying college and dishwashing, I found my way to software engineering. Curiosity about how websites function and a deep interest in technology led me to App Academy's full-stack engineering bootcamp. Here, I honed my skills in JavaScript, Python, Node.js, and React. Now equipped with a diverse skill set, I'm poised to contribute innovative solutions as a software engineer. My path might be unconventional, but it's paved with determination and a passion for coding.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image pfpimg"><img src="https://aws-starter-bucket123.s3.amazonaws.com/IMG_20230827_212338590.jpg" alt="" /></span>
+							<span class="image fit"><img src="https://aws-starter-bucket123.s3.amazonaws.com/IMG_20230827_212338590.jpg" alt="" /></span>
 						</div>
 					</div>
 				</div>
