added better email links and removed deadlinks

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Photon by HTML5 UP</title>
+		<title>James Askelson</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,6 +23,7 @@
 					<span class="icon solid major fa-cloud"></span>
 					<h1>James Askelson</h1>
 					<p>(Lafayette, Louisiana)</p>
+					<p>Email: <a href="mailto:jamesaskelson630@gmail.com">jamesaskelson630@gmail.com</a></p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Discover</a></li>
 					</ul>
@@ -118,10 +119,10 @@
 					<header class="major">
 						<h2>My Info</h2>
 					</header>
-					<p>Email: <a href="https://mail.google.com/mail/u/0/#inbox">jamesaskelson630@gmail.com</a></p>
+
 					<ul class="actions special">
 						<li><a href="https://github.com/JamesAskelson" class="button wide primary">My Github</a></li>
-						<li><a href="#" class="button wide">My Linkedn</a></li>
+						<li><a href="https://www.linkedin.com/in/james-askelson-bb4b6928a/" class="button wide">My Linkedn</a></li>
 					</ul>
 				</div>
 			</section>
@@ -447,14 +448,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+					<!-- <li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="#" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li> -->
+					<li><a href="https://github.com/JamesAskelson" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+					<li><a href="mailto:jamesaskelson630@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
-					<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; 2023</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
 			</section>
 
