removed spots around the world for now

--- a/index.html
+++ b/index.html
@@ -84,15 +84,15 @@
 					<header class="major">
 						<h2>My projects</h2>
 					</header>
-					<div class="row gtr-150">
-						<div class="col-4 col-12-medium">
+					<div class="custom-row">
+						<!-- <div class="col-4 col-12-medium">
 							<span class="image fit"><img src="https://i.imgur.com/AGId8yC.png" alt="" /></span>
 							<h3>Spots Around the World</h3>
 							<p>A clone site based on AirBnB where you can look at spots from around the world, while also being able to make reviews and book trips.</p>
 							<ul class="actions special">
 								<li><a href="https://airbnb-api-clone.onrender.com/" class="button">Check it out</a></li>
 							</ul>
-						</div>
+						</div> -->
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="https://i.imgur.com/Lx40m1y.png" alt="" /></span>
 							<h3>Rignite</h3>
