--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
 						<h2>My projects</h2>
 					</header>
 					<div class="custom-row">
-						<!-- <div class="col-4 col-12-medium">
-							<span class="image fit"><img src="https://i.imgur.com/AGId8yC.png" alt="" /></span>
-							<h3>Spots Around the World</h3>
-							<p>A clone site based on AirBnB where you can look at spots from around the world, while also being able to make reviews and book trips.</p>
+						<div class="col-4 col-12-medium">
+							<span class="image fit"><img src="https://imgur.com/8dbqYbv" alt="" /></span>
+							<h3>True Vibes</h3>
+							<p>A dating app where you can meet people from around the globe, liking those who fit your groove and messaging to your hearts content.</p>
 							<ul class="actions special">
-								<li><a href="https://airbnb-api-clone.onrender.com/" class="button">Check it out</a></li>
+								<li><a href="https://true-vibes-amb3bngqgkc2b8dy.centralus-01.azurewebsites.net/" class="button">Check it out</a></li>
 							</ul>
-						</div> -->
+						</div>
 						<div class="col-4 col-12-medium">
 							<span class="image fit"><img src="https://i.imgur.com/Lx40m1y.png" alt="" /></span>
 							<h3>Rignite</h3>
