--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 					</header>
 					<div class="custom-row">
 						<div class="col-4 col-12-medium">
-							<span class="image fit"><img src="https://imgur.com/8dbqYbv" alt="" /></span>
+							<span class="image fit"><img src="https://imgur.com/8dbqYbv.png" alt="" /></span>
 							<h3>True Vibes</h3>
 							<p>A dating app where you can meet people from around the globe, liking those who fit your groove and messaging to your hearts content.</p>
 							<ul class="actions special">
